--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,7 @@ languageCode = 'en-us'
 title = 'My New Hugo Sitei'
 theme = 'archie'
 copyright = "© bus-hit.me"
+uglyURLs = false
 
 # Code Highlight
 pygmentsstyle = "monokai"
