--- a/hugo.toml
+++ b/hugo.toml
@@ -9,3 +9,7 @@ uglyURLs = true
 pygmentsstyle = "monokai"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
+
+
+[params]
+	mode="dark" # color-mode → light,dark,toggle or auto
