--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://www.s3-ec1-1a-01.tbc.otter.ge'
 languageCode = 'en-us'
-title = 'My New Hugo Sitei'
+title = 'TBC | S3 Hugo'
 theme = 'archie'
 copyright = "© bus-hit.me"
 uglyURLs = true 
