--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ defaults:
 jobs:
   # Build job
   build:
-    runs-on: self-hosted
+    runs-on: homelab
     env:
       HUGO_VERSION: ${{ vars.HUGO_VERSION }}
     steps:
